<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_green"
    tools:context=".activity.dashboard.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/white"
            app:elevation="0dp"
            app:layout_scrollFlags="enterAlwaysCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_chevron_left_24"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14dp"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="진로탐색"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:fontFamily="@font/nanum_square_r"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/appBarLayout"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_one_white" />

                <ImageView
                    android:id="@+id/img_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_two_white" />

                <ImageView
                    android:id="@+id/img_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_three_white" />

                <ImageView
                    android:id="@+id/img_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_four_white" />

                <ImageView
                    android:id="@+id/img_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_five_white" />

                <ImageView
                    android:id="@+id/img_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_six_white" />

                <ImageView
                    android:id="@+id/img_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/icon_seven_white" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/number_layout"
                android:elevation="3dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_round_navy">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="26dp"
                            android:layout_centerVertical="true"
                            android:text="Question 1"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:fontFamily="@font/nanum_square_b" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="430dp"
                        android:background="@drawable/bg_round_white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/question_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="72dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/course_question_1"
                            android:textSize="18dp"
                            android:textColor="@color/howareu_main"
                            android:fontFamily="@font/nanum_square_r"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="52dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/response1_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/ic_question_1_1"
                                    android:layout_gravity="center"/>

                                <CheckBox
                                    android:id="@+id/check_response1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="12dp" />

                                <TextView
                                    android:id="@+id/response1"
                                    android:layout_width="140dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/course_question_1_response_1"
                                    android:textSize="10dp"
                                    android:textColor="#CC000000"
                                    android:fontFamily="@font/nanum_square_l"/>

                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:text="VS"
                                android:textSize="21dp"
                                android:textColor="@color/howareu_main"
                                android:fontFamily="@font/nanum_square_r"
                                android:layout_gravity="center" />

                            <LinearLayout
                                android:id="@+id/response2_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:src="@drawable/ic_question_1_2"
                                    android:layout_gravity="center"/>

                                <CheckBox
                                    android:id="@+id/check_response2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="12dp" />

                                <TextView
                                    android:id="@+id/response2"
                                    android:layout_width="140dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/course_question_1_response_2"
                                    android:textSize="10dp"
                                    android:textColor="#CC000000"
                                    android:fontFamily="@font/nanum_square_l"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="64dp"
                android:layout_below="@+id/viewpager">

                <TextView
                    android:id="@+id/txt_before"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_arrow_left"
                    android:paddingRight="10dp"
                    android:paddingLeft="15dp"
                    android:gravity="center"
                    android:text="이전 문항"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:fontFamily="@font/nanum_square_l"/>

                <TextView
                    android:id="@+id/txt_after"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/icon_arrow_right"
                    android:paddingRight="15dp"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:text="다음 문항"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:fontFamily="@font/nanum_square_l"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>